# aviacia

./: .gitignore  CLAUDE.md  Commands.txt  DataRefs.txt  PIDNN.mmd  XPlaneConnectX.py  conftest.py  ics_connector.py  implementation_plan.md  main.ipynb  pyproject.toml  requirements.txt  utils.py
docs/: ICSInterface.cs  PIDNN.mmd  Входы_САУ.xlsx  Матрица_прогонов_ПИД_ИСМПУ.xlsx
ismpu/: __init__.py
ismpu/agent/: __init__.py  gain_scheduler.py  gain_space.py  normalization.py  ppo.py  pretrain.py  shield.py
ismpu/config/: __init__.py  aircraft.py  approach.py  constants.py  criticality.py  envelope.py  ics.py  regulators.py  requirements.py  run_matrix.py  runway.py  scenarios.py
ismpu/control/: __init__.py  approach.py  channels.py  failures.py  flight.py  pid.py  runway_tracker.py  system.py  tolerance.py  trajectory.py
ismpu/envs/: __init__.py  action.py  ics_sim.py  observation.py  reproducibility.py  reward.py  rollout_env.py  scenario.py  scenario_generator.py  sim_interface.py  splits.py  weather.py
ismpu/io/: __init__.py  datarefs.py  ics_connector.py  ics_engagement.py  xplane_connector.py
tests/: fakes.py  test_action_contract.py  test_approach_channel.py  test_control_parity.py  test_evaluate.py  test_full_flight.py  test_gain_scheduler.py  test_gain_space.py  test_go_around.py  test_icd_units.py  test_ics_connector.py  test_ics_engagement.py  test_ics_sim.py  test_pid_numerics.py  test_ppo.py  test_pretrain.py  test_rollout_env.py  test_run_matrix.py  test_shield.py  test_sim_interface.py  test_splits.py  test_tolerance.py  test_weather.py
(+9 files in other folders)
