[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ismpu"
version = "0.0.1"
description = "Интеллектуальная система многопараметрического управления ВС на посадке и пробеге по ВПП"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "termcolor>=2.0",
]

[project.optional-dependencies]
# Нейросетевой контур (Этап 4+): актор PIDNN, PPO, среда RL.
rl = [
    "torch>=2.0",
    "gymnasium>=0.29",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["ismpu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
